# SimpleEthercat_interfaces

./: README.md
ethercat_dlc/: CMakeLists.txt  package.xml
ethercat_dlc/include/ethercat_dlc/: ecat_can_DM4310.hpp  ecat_can_GM6020.hpp  ecat_can_MW6010.hpp
ethercat_dlc/src/: ecat_can_DM4310.cpp  ecat_can_GM6020.cpp  ecat_can_MW6010.cpp
ethercat_dlc/test/: test_demo_DM4310.cpp  test_demo_GM6020.cpp  test_demo_MW6010.cpp  test_demo_can.cpp
ethercat_example/include/ethercat_example/ecat_motor_dlc/: ecat_GM6020.hpp
ethercat_interfaces/: CMakeLists.txt  package.xml
ethercat_interfaces/include/ethercat_interfaces/: EcatBase.hpp  TypeDef.hpp
ethercat_interfaces/src/: EcatBase.cpp
ethercat_to_can/: CMakeLists.txt  package.xml
ethercat_to_can/include/ecat_can_base/: ecat_base.h  ecat_base.hpp  ecat_typedef.h
ethercat_to_can/include/ecat_motor_dlc/: ecat_DM4310.h  ecat_DM4310.hpp  ecat_GM6020.h  ecat_GM6020.hpp
ethercat_to_can/src/: test_demo.cpp  test_demo_DM4310.cpp  test_demo_GM6020.cpp  test_demo_THD.cpp
ethercat_to_can/src/ecat_can_base/: ecat_base.cpp
ethercat_to_can/src/ecat_motor_dlc/: ecat_DM4310.cpp  ecat_GM6020.cpp
